--- a/smart-research-assistant/src/main/resources/application.properties
+++ b/smart-research-assistant/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=smart-research-assistant
 
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=
-gemini.api.key=${GEMINI_KEY}
+gemini.api.key=${GEMINI_KEY} // your gemini API key or set it as an Environment Variable
